<resources>
    <string name="app_name">GitNaija</string>
    <string name="custom_name">Damilola Ogunsola</string>
    <string name="custom_mail">damilolaogun@yahoo.com</string>
    <string name="error">Sorry, an error Occured!!!</string>
    <string name="try_again">Try Again</string>
    <string name="username">Username</string>
    <string name="profile_url">http://www.github.com/</string>
    <string name="genre_label">profile_url</string>
    <string name="work_place">Github</string>
    <string name="developer_name">Indiana45</string>
    <string name="public_repos">public repos</string>
    <string name="bio">Biography</string>
    <string name="info">Showing java developers in Uyo, Akwa-ibom state, Nigeria</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Labels for skills Category-->
    <string name="pref_skill_label">Categorise by Skills</string>

    <string name="pref_skill_label_htm">Html</string>
    <string name="pref_skill_label_css">Css</string>
    <string name="pref_skill_label_jav">Java</string>
    <string name="pref_skill_label_jvs">JavaScript</string>
    <string name="pref_skill_label_nod">Nodejs</string>
    <string name="pref_skill_label_typ">TypeScript</string>
    <string name="pref_skill_label_php">Php</string>
    <string name="pref_skill_label_go">Go</string>
    <string name="pref_skill_label_pyt">Python</string>

    <!-- values for skills Category-->
    <string name="pref_skill_key" translatable="false">skill</string>

    <string name="pref_skill_value_htm" translatable="false">html</string>
    <string name="pref_skill_value_css" translatable="false">css</string>
    <string name="pref_skill_value_jav" translatable="false">java</string>
    <string name="pref_skill_value_jvs" translatable="false">javascript</string>
    <string name="pref_skill_value_nod" translatable="false">nodejs</string>
    <string name="pref_skill_value_typ" translatable="false">typescript</string>
    <string name="pref_skill_value_php" translatable="false">php</string>
    <string name="pref_skill_value_go" translatable="false">go</string>
    <string name="pref_skill_value_pyt" translatable="false">python</string>
</resources>
