<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8sp"
        app:cardCornerRadius="4sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/top_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/developer_name"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_name_tag"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/username"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/pub_rep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="44"
                        android:layout_gravity="center"
                        android:textColor="@color/secondary_text"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pub_rep_tag"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/public_repos"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </LinearLayout>


            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1sp"
                android:layout_below="@id/top_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:background="@color/secondary_text" />

            <TextView
                android:id="@+id/profile_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/profile_url"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/profile_url_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_url"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/genre_label"
                android:textColor="@color/primary_text" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1sp"
                android:layout_below="@id/profile_url_tag"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5sp"
                android:background="@color/secondary_text" />

            <TextView
                android:id="@+id/workplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/work_place"
                android:textColor="@color/secondary_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/workplace_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workplace"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="5sp"
                android:text="Works at"
                android:textColor="@color/primary_text" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1sp"
                android:layout_below="@id/workplace_tag"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5sp"
                android:background="@color/secondary_text" />

            <TextView
                android:id="@+id/biography_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:text="@string/bio"
                android:textColor="@color/primary_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/biography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/biography_tag"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10sp"
                android:textAlignment="center"
                android:layout_marginTop="5sp"
                android:text=" "
                android:textColor="@color/secondary_text" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:src="@drawable/github" />

    <include
        android:id="@+id/error_screen"
        layout="@layout/error_layout"
        android:visibility="gone" />

</LinearLayout>